package br.com.fiap.techchallenge.core.domain.enums;

public enum PaymentStatus {

    PENDING,
    PAID,
    FAILED,
    REFUNDED
}
